--- a/GP_HorusEye/package.json
+++ b/GP_HorusEye/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.0.1",
     "react-router": "^6.22.1",
     "react-router-dom": "^6.22.1",
+    "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.8"
   },
