--- a/GP_HorusEye/package.json
+++ b/GP_HorusEye/package.json
@@ -23,7 +23,9 @@
     "react-icons": "^5.0.1",
     "react-router": "^6.22.1",
     "react-router-dom": "^6.22.1",
-    "styled-components": "^6.1.8"
+    "recoil": "^0.7.7",
+    "styled-components": "^6.1.8",
+    "sweetalert2": "^11.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
