--- a/GP_HorusEye/package.json
+++ b/GP_HorusEye/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
